[package]
name = "juniper_rocket_multipart_handler"
version = "0.0.1"
description = "A juniper multipart handler for Rocket web server"
authors = ["Nelson Herbin <nelson@herbin.info>"]
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/Asone/graphQLN"
homepage = "https://github.com/Asone/graphQLN"

[dependencies]
multer = "2.0.2"
serde = "1.0.136"
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["serde", "v4"] }


[dependencies.juniper]
version = "0.15.7"

[dependencies.juniper_rocket]
version = "0.8.2"

[dependencies.rocket]
version = "=0.5.0-rc.2"

[dependencies.tokio-util]
version = "0.7.1"

